bug fix swiper show if mounted only to prevent screen from jumping, aos bug fix to accomodate ratio (padding method)

--- a/client/assets/css/tailwind.css
+++ b/client/assets/css/tailwind.css
@@ -6,8 +6,8 @@
   font-family: 'Gotham';
   font-weight: 400;
   font-style: normal;
-  src: url('~assets/fonts/GothamLight.ttf') format('truetype'),
-    url('~assets/fonts/gothamlight-webfont.woff') format('woff'),
+  src: url('~assets/fonts/gothamlight-webfont.woff') format('woff'),
+    url('~assets/fonts/GothamLight.ttf') format('truetype'),
     url('~assets/fonts/gothamlight-webfont.woff2') format('woff2');
 }
 
@@ -15,8 +15,8 @@
   font-family: 'Gotham';
   font-weight: 500;
   font-style: normal;
-  src: url('~assets/fonts/GothamMedium.ttf') format('truetype'),
-    url('~assets/fonts/gothammedium-webfont.woff') format('woff'),
+  src: url('~assets/fonts/gothammedium-webfont.woff') format('woff'),
+    url('~assets/fonts/GothamMedium.ttf') format('truetype'),
     url('~assets/fonts/gothammedium-webfont.woff2') format('woff2');
 }
 
@@ -24,8 +24,8 @@
   font-family: 'Gotham';
   font-weight: 700;
   font-style: normal;
-  src: url('~assets/fonts/GothamBold.ttf') format('truetype'),
-    url('~assets/fonts/gothambold-webfont.woff') format('woff'),
+  src: url('~assets/fonts/gothambold-webfont.woff') format('woff'),
+    url('~assets/fonts/GothamBold.ttf') format('truetype'),
     url('~assets/fonts/gothambold-webfont.woff2') format('woff2');
 }
 
